# Optimize-Test-Repeat

./: .gitignore  OTR_AGENT_GUIDE.md  README.md  engine.py  otr_config.py  otr_run.py  pyproject-cuda.toml  pyproject.toml  reporter.py  setup.sh  storage.py
.otr/: g_best.json  history_journal.json  intra_gen_workspace.json
tests/: test_compiled_model.py  test_data_pipeline.py  test_generation.py  test_llm_core.py  test_refinements.py
tests/.otr/: intra_gen_workspace.json
