[project]
name = "optimize-test-repeat"
version = "0.1.0"
description = "OTR (Optimize Test Repeat) Framework"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "torch==2.10.0+rocm7.1",
    "triton-rocm>=3.6.0",
    "pytest>=8.0.0",
    "rich>=13.7.0",
    "plotext>=5.2.8",
    "setuptools",
    "numpy",
]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true
